tests/invalid_inputs/sema/name_redeclaration.cpp
// test that the compiler catches name redeclaration

int main() {
	int a;
	int a;
}
